feat: improved swagger autogen
